--- a/tools/mentatweb/Cargo.toml
+++ b/tools/mentatweb/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "mentat_web"
 version = "0.0.2"
+edition = "2021"
 
 # Forward mentat's features.
 [features]
@@ -19,8 +20,19 @@ doc = false
 test = false
 
 [dependencies]
-clap = "3.1.16"
-nickel = "*"
+actix-web = "4"
+
+#env_logger = "0.9"
+#futures-util = { version = "0.3", default-features = false, features = ["std"] }
+#log = "0.4"
+r2d2 = "0.8"
+r2d2_sqlite = "0.19"
+#rusqlite = "0.26"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+#clap = "3.1.16"
+#nickel = "*"
+#rustc-serialize = "*"
 #combine = "~4.6"
 #dirs = "~4.0"
 #env_logger = "~0.9"
