--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,6 +10,8 @@ failure = "~0.1"
 indexmap = "~1.7"
 ordered-float = { version = "~2.8", features = ["serde"] }
 uuid = { version = "~0.8", features = ["v4", "serde"] }
+serde = { version = "~1.0", optional = true }
+serde_derive = { version = "~1.0", optional = true }
 
 [dependencies.core_traits]
 path = "../core-traits"
