--- a/query-projector/Cargo.toml
+++ b/query-projector/Cargo.toml
@@ -9,6 +9,9 @@ sqlcipher = ["rusqlite/sqlcipher"]
 [dependencies]
 failure = "~0.1"
 indexmap = "~1.7"
+serde = { version = "~1.0", optional = true }
+serde_derive = { version = "~1.0", optional = true }
+serde_json = "~1.0"
 
 [dependencies.rusqlite]
 version = "~0.26"
