--- a/tools/mentatweb/Cargo.toml
+++ b/tools/mentatweb/Cargo.toml
@@ -21,33 +21,9 @@ test = false
 
 [dependencies]
 actix-web = "4"
-
-#env_logger = "0.9"
-#futures-util = { version = "0.3", default-features = false, features = ["std"] }
-#log = "0.4"
-r2d2 = "0.8"
-r2d2_sqlite = "0.19"
-#rusqlite = "0.26"
-serde = { version = "1", features = ["derive"] }
+serde = { version = "~1.0", features = ["derive"] }
 serde_json = "1"
-#clap = "3.1.16"
-#nickel = "*"
-#rustc-serialize = "*"
-#combine = "~4.6"
-#dirs = "~4.0"
-#env_logger = "~0.9"
-#failure = "~0.1"
-#failure_derive = "~0.1"
-#getopts = "~0.2"
-#lazy_static = "~1.4"
-#linefeed = "~0.6"
-#log = "~0.4"
-#tabwriter = "~1.2"
-#tempfile = "~3.2"
-#termion = "~1.5"
-#time = "~0.3"
-#bytes = { version = "1.0.1", features = ["serde"] }
-#hex = "0.4.3"
+
 
 [dependencies.rusqlite]
 version = "~0.26"
