--- a/query-projector/Cargo.toml
+++ b/query-projector/Cargo.toml
@@ -1,4 +1,5 @@
 [package]
+edition = "2021"
 name = "mentat_query_projector"
 version = "0.0.2"
 workspace = ".."
@@ -9,9 +10,7 @@ sqlcipher = ["rusqlite/sqlcipher"]
 [dependencies]
 failure = "~0.1"
 indexmap = "~1.7"
-serde = { version = "~1.0", optional = true }
-serde_derive = { version = "~1.0", optional = true }
-serde_json = "~1.0"
+serde = { version = "~1.0", features = ["derive"] }
 
 [dependencies.rusqlite]
 version = "~0.26"
